ghc-4335c07/testsuite/tests/rename/should_fail/T2901.hs
{-# LANGUAGE DisambiguateRecordFields #-}
-- Trac #2901

module T2901 where

f = F.Foo { F.field = "" }
